--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 		</div>
 		<div class='container'>
 			<div class='col-md-4 loc col-md-offset-2'
-			data-100-bottom='right: 400%;'
-			data-100-top='right: 0%;'>
+			data-100-bottom='opacity: 0;'
+			data-100-top='opacity: 1;'>
 				<img src='css/image/office-building.png'>
 				<h3>Chandler, Arizona</h3>
 			</div>
 
 			<div class='col-md-4 loc col-md-offset-2'
-			data-100-bottom='left: 400%;'
-			data-100-top='left: 0%;'>
+			data-100-bottom='opacity: 0;'
+			data-100-top='opacity: 1;'>
 				<img src='css/image/buildingtwo.png'>
 				<h3>Irvine, California</h3>
 			</div>
@@ -156,9 +156,6 @@
 	data-top="margin-top: -50px;">
 		<div class='container'>
 			<h1>Who We Work With</h1>
-			<div class='col-md-3' data-bottom-top="left: -75%; margin-top: -80%;" 
-	data-top="left: 80%; margin-top: 30%;">
-			<img src='css/image/pilot_rev.png'>
 		</div>
 		</div>
 	</div>
@@ -166,11 +163,6 @@
 <!-- Footer -->
 
 	<footer>
-		<div class='container end col-sm-12'
-		data-bottom-top="color:rgb(51,51,51);"
-		data-top="color:rgb(255,255,255);">
-			<h1><img class='plane_logo' src='css/image/pilot.png'>SloanHealy</h1>
-		</div>
 		<div class='container col-sm-4'>
 		<h2>Partners</h2>
 			<a href="http://www.google.com"><h5>Client Login</h5></a>
