--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-              </button>			
+              	</button>			
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class='nav navbar-nav'>
-					<li><a href='#slideOne' onclick="$('.slideOne').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})"><img class='plane_logo' src='css/image/pilot.png'></a></li>
-					<li><a href="#sec-five" id='words' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">ABOUT US<span class="caret"></span></a>
+					<li><a href='#slideOne' onclick="$('.slideOne').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})"><img class='plane_logo' src='css/image/pilot.png' alt='pilot'></a></li>
+					<li><a href="#sec-five" class="words dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">ABOUT US<span class="caret"></span></a>
 					<ul class="dropdown-menu dropdown-menu-left" role="menu">
-						<li id='words'><a href='#slideThree' onclick="$('.slideThree').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">OUR STORY</a></li>
-						<li id='words'><a href='#slideThree' onclick="$('.new').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">A NEW WAY</a></li>
-						<li id='words'><a href='#slideThree' onclick="$('.mission').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">OUR MISSION</a></li>
+						<li class='words'><a href='#slideThree' onclick="$('.slideThree').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">OUR STORY</a></li>
+						<li class='words'><a href='#slideThree' onclick="$('.new').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">A NEW WAY</a></li>
+						<li class='words'><a href='#slideThree' onclick="$('.mission').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">OUR MISSION</a></li>
 					</ul>
-					<li id='words'><a href='#slideTwo' onclick="$('.slideTwo').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">LOCATION</a></li>
-					<li id='words'><a href='#slideFour' onclick="$('.slideFour').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">WHO WE ARE</a></li>			
-		          	<li id='words'><a href='#slideFive' onclick="$('.Five').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">WHAT WE DO</a></li>
+					<li class='words'><a href='#slideTwo' onclick="$('.slideTwo').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">LOCATION</a></li>
+					<li class='words'><a href='#slideFour' onclick="$('.slideFour').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">WHO WE ARE</a></li>			
+		          	<li class='words'><a href='#slideFive' onclick="$('.Five').animatescroll({scrollSpeed:4000,easing:'easeInOutSine'})">WHAT WE DO</a></li>
       			</ul>
 			</div>
 		</div>
@@ -47,148 +47,113 @@
 	<div class='jumbotron slideOne'>
 		<div class='container cont'>
 			<h1>A Different Kind of <br>Advertising Agency</h1>
-			<h2>&#8226; Lorem &#8226; Ipsum &#8226; Dolor &#8226;<h2>
-				<div class='col-md-4 plane'
-			data-100-top='left: 50%;'
-			data-top-bottom='left: -50%;'>
-				<img src='css/image/pilot.png'>
+			<h2>&#8226; Lorem &#8226; Ipsum &#8226; Dolor &#8226;</h2>
+			<div class='col-md-4 plane' data-100-top='left: 50%;' data-top-bottom='left: -50%;'>
+				<img src='css/image/pilot.png' alt='pilot'>
+			</div>
 		</div>
 	</div>
-</div>
-	
-	<div class='jumbotron slideThree'
-	data-bottom-top="margin-top: -100px;" 
-	data-top="margin-top: 0px;">
+
+	<div class='jumbotron slideThree' data-bottom-top="margin-top: -100px;" data-top="margin-top: 0px;">
 		<div class='container Three'>
-			<div class='col-md-12'
-			data-bottom-top='opacity: 0;'
-			data-100-top='opacity: 1';>
+			<div class='col-md-12' data-bottom-top='opacity: 0;' data-100-top='opacity: 1;'>
 				<h1>Our Story</h1>
-						<br />
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum suscipit lacus massa, non consectetur est sodales a. In vitae felis tincidunt, commodo urna eget, elementum mauris. Nam nec molestie ipsum. Donec finibus bibendum eleifend. Nullam sit amet venenatis leo. Duis vehicula ipsum aliquam ligula laoreet, id rhoncus nisi tristique. Duis accumsan risus vitae turpis ultricies, ac volutpat dui consectetur. Etiam ac imperdiet velit. Vivamus faucibus, odio et aliquet vehicula, sem lacus varius purus, a facilisis mi purus et ligula. Aenean id placerat arcu. Donec quis suscipit felis, sit amet facilisis libero.<p/>
-						<br />
-					<p>Morbi faucibus, risus at eleifend blandit, velit lectus porttitor magna, sed mollis nunc lectus at nibh. Aliquam sagittis elit id nibh gravida, ut ullamcorper justo dignissim. Suspendisse potenti. Mauris condimentum sagittis mollis. Vestibulum et erat quam. Nulla sodales sem sed ante vulputate ullamcorper. Vestibulum lobortis risus sit amet nulla suscipit sagittis. Ut lacinia, erat ut rhoncus molestie, eros quam semper quam, eget eleifend erat nunc ut velit. Aenean sit amet nisi sed sem interdum porta. Quisque ac feugiat leo, ac rutrum felis.</p>
-						<br />
-						<br />
+				<br />
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum suscipit lacus massa, non consectetur est sodales a. In vitae felis tincidunt, commodo urna eget, elementum mauris. Nam nec molestie ipsum. Donec finibus bibendum eleifend. Nullam sit amet venenatis leo. Duis vehicula ipsum aliquam ligula laoreet, id rhoncus nisi tristique. Duis accumsan risus vitae turpis ultricies, ac volutpat dui consectetur. Etiam ac imperdiet velit. Vivamus faucibus, odio et aliquet vehicula, sem lacus varius purus, a facilisis mi purus et ligula. Aenean id placerat arcu. Donec quis suscipit felis, sit amet facilisis libero.</p>
+				<br />
+				<p>Morbi faucibus, risus at eleifend blandit, velit lectus porttitor magna, sed mollis nunc lectus at nibh. Aliquam sagittis elit id nibh gravida, ut ullamcorper justo dignissim. Suspendisse potenti. Mauris condimentum sagittis mollis. Vestibulum et erat quam. Nulla sodales sem sed ante vulputate ullamcorper. Vestibulum lobortis risus sit amet nulla suscipit sagittis. Ut lacinia, erat ut rhoncus molestie, eros quam semper quam, eget eleifend erat nunc ut velit. Aenean sit amet nisi sed sem interdum porta. Quisque ac feugiat leo, ac rutrum felis.</p>
+				<br />
+				<br />
 			</div>
-		
-			<div class='col-md-7'
-			data-100-bottom='right: -150%;'
-			data-bottom='right: 0%;'>
+			<div class='col-md-7' data-100-bottom='right: -150%;' data-bottom='right: 0%;'>
 				<h1 class='new'>A New Way of Advertising</h1>
 				<p>Morbi faucibus, risus at eleifend blandit, velit lectus porttitor magna, sed mollis nunc lectus at nibh. Aliquam sagittis elit id nibh gravida, ut ullamcorper justo dignissim. Suspendisse potenti. Mauris condimentum sagittis mollis. Vestibulum et erat quam. Nulla sodales sem sed ante vulputate ullamcorper. Vestibulum lobortis risus sit amet nulla suscipit sagittis. Ut lacinia, erat ut rhoncus molestie, eros quam semper quam, eget eleifend erat nunc ut velit. Aenean sit amet nisi sed sem interdum porta. Quisque ac feugiat leo, ac rutrum felis.</p>
 			</div>
-				<div class='col-md-5'
-			data-200-bottom='left: -150%;'
-			data-bottom='left: 0%;'>
+			<div class='col-md-5' data-200-bottom='left: -150%;' data-bottom='left: 0%;'>
 				<h1 class='mission'>Our Mission</h1>
 				<p>Phasellus ut molestie velit. In venenatis enim at iaculis blandit. Sed ac turpis non magna congue imperdiet sit amet ut turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut purus ut lectus laoreet hendrerit. Vivamus ullamcorper, elit quis viverra tempor, lorem tortor tincidunt lorem, quis volutpat erat ipsum ac quam. Fusce id eros in justo volutpat pretium. In interdum pretium turpis vitae blandit. Pellentesque hendrerit magna vitae ultricies semper. Nunc rutrum vehicula metus nec accumsan. Proin egestas libero vitae ante pellentesque, in congue nisi dapibus. Vestibulum faucibus molestie justo, ac porta libero mollis ut. </p>
-					<br />
-					<br />
+				<br />
+				<br />
 			</div>
-			</div>
+		</div>
 	</div>
-	<div class='jumbotron slideTwo'
-	data-bottom-top="margin-top: -100px;" 
-	data-top="margin-top: 0px;">
-		<div class='container'
-		data-top="margin-top: 10px;" 
-	data-bottom="margin-top: -75px;">
+
+	<div class='jumbotron slideTwo' data-bottom-top="margin-top: -100px;" data-top="margin-top: 0px;">
+		<div class='container' data-top="margin-top: 10px;" data-bottom="margin-top: -75px;">
 			<h1>Two Locations</h1>		
 		</div>
 		<div class='container'>
-			<div class='col-md-4 loc col-md-offset-2'
-			data-bottom-top='margin-top: 0px;'
-			data-top-bottom='margin-top: 100px';>
-				<img src='css/image/office-building.png'>
+			<div class='col-md-4 loc col-md-offset-2' data-bottom-top='margin-top: 0px;' data-top-bottom='margin-top: 100px;'>
+				<img src='css/image/office-building.png' alt='Chandler, AZ'>
 				<h3>Chandler, Arizona</h3>
 			</div>
-
-			<div class='col-md-4 loc col-md-offset-2'
-			data-bottom-top='margin-top: 0px;'
-			data-top-bottom='margin-top: 100px';>
-				<img src='css/image/buildingtwo.png'>
+			<div class='col-md-4 loc col-md-offset-2' data-bottom-top='margin-top: 0px;' data-top-bottom='margin-top: 100px;'>
+				<img src='css/image/buildingtwo.png' alt='Irvine, CA'>
 				<h3>Irvine, California</h3>
-			</div>
 			</div>
 		</div>
 	</div>
-	<div class='jumbotron slideFour' 
-	data-bottom-top="margin-top: -100px;" 
-	data-top="margin-top: 0px;">
-		<div class='container' 
-		data-bottom-top='margin-top: -125px;'
-			data-top-bottom='margin-top: 100px';>
+
+	<div class='jumbotron slideFour' data-bottom-top="margin-top: -100px;" data-top="margin-top: 0px;">
+		<div class='container' data-bottom-top='margin-top: -125px;' data-top-bottom='margin-top: 100px;'>
 			<h1>Corporate Leaders</h1>
-			<div class='face col-xs-12'
-			data-bottom-top='margin-top: -30px;'
-			data-top-bottom='margin-top: 100px';>
+			<div class='face col-xs-12' data-bottom-top='margin-top: -30px;' data-top-bottom='margin-top: 100px;'>
 				<img src="css/image/photo1.png" alt='Charles Sloan Jr.'/>
 	   			<h4>Charles Sloan Jr.</h4>
  				<h5>Owner/President</h5>
 	  		</div>
-	  		<div class='face col-md-4 col-xs-6'
-	  		data-bottom-top='margin-top: -175px;'
-			data-top-bottom='margin-top: 75px';>
+	  		<div class='face col-md-4 col-xs-6' data-bottom-top='margin-top: -175px;' data-top-bottom='margin-top: 75px;'>
 	    		<img src="css/image/photo3.png" alt='David Healy'/>
 	    		<h4>David Healy</h4>
 	    		<h5>Owner/CEO</h5>
 	  		</div>
-	  		<div class='face col-md-4 col-xs-6'
-	  		data-bottom-top='margin-top: 100px;'
-			data-top-bottom='margin-top: -40px';>
+	  		<div class='face col-md-4 col-xs-6' data-bottom-top='margin-top: 100px;' data-top-bottom='margin-top: -40px;'>
 	    		<img src="css/image/photo7.png" alt='Dickey Dickums'/>
 	    		<h4>Dickey Dickums</h4>
 	    		<h5>Sr. Vice President</h5>
-	  		</div>
-	  		<div class='face col-md-4 col-xs-6'
-	  		data-bottom-top='margin-top: -175px;'
-			data-top-bottom='margin-top: 100px';>
+	  		</div> 
+	  		<div class='face col-md-4 col-xs-6' data-bottom-top='margin-top: -175px;' data-top-bottom='margin-top: 100px;'>
 	    		<img src="css/image/photo7.png" alt='Charles Norwood'/>
 	    		<h4>Charles Norwood</h4>
 	    		<h5>VP Sales</h5>
 	  		</div>
-	  		<div class='face col-md-6 col-xs-6'
-	  		data-bottom-top='margin-top: 100px;'
-			data-top-bottom='margin-top: -75px';>
+	  		<div class='face col-md-6 col-xs-6' data-bottom-top='margin-top: 100px;' data-top-bottom='margin-top: -75px;'>
 	    		<img src="css/image/photo3.png" alt='Pip Dawkins'/>
 	    		<h4>Pip Dawkins</h4>
 	    		<h5>Executive VP</h5>
 	  		</div>
-	  		<div class='face col-md-6 col-xs-6'
-	  		data-bottom-top='margin-top: 100px;'
-			data-top-bottom='margin-top: -75px';>
+	  		<div class='face col-md-6 col-xs-6' data-bottom-top='margin-top: 100px;' data-top-bottom='margin-top: -75px;'>
 	    		<img src="css/image/photo9.png" alt='Kevin Lofton'/>
 	    		<h4>Kevin Lofton</h4>
 	    		<h5>Bathroom Attendant</h5>
 	  		</div>
 		</div>
 	</div>
-	<div class='jumbotron slideFive'
-	data-bottom-top="margin-top: -100px;" 
-	data-top="margin-top: -50px;">
+
+	<div class='jumbotron slideFive' data-bottom-top="margin-top: -100px;" data-top="margin-top: -50px;">
 		<div class='container Five'>
 			<h1>Who We Work With</h1>
 		</div>
 	</div>
-<img class='grass' src='css/image/grass.png'>
+
+	<img class='grass' src='css/image/grass.png' alt='beautiful green grass'>
 <!-- Footer -->
 
 	<footer>
 		<div class='container col-sm-4'>
-		<h2>Partners</h2>
+			<h2>Partners</h2>
 			<a href="http://www.google.com"><h5>Client Login</h5></a>
 			<a href="http://www.google.com"><h5>Services</h5></a>
 		</div>
 		<div class='container col-sm-4'>
-		<h2>Corporate</h2>
+			<h2>Corporate</h2>
 			<a href="http://www.google.com"><h5>Overview</h5></a>
 			<a href="http://www.google.com"><h5>Info</h5></a>
 			<a href="http://www.google.com"><h5>Legal</h5></a>
 			<a href="http://www.google.com"><h5>Privacy Policy</h5></a>
 		</div>
 		<div class='container col-sm-4'>
-		<h2>Contact</h2>
+			<h2>Contact</h2>
 			<a href="http://www.mapquest.com"><h5>123 Fake Street <br/>Chandler, AZ 85225</h5></a>
 			<a href="tel:15555555555"><h5>+1.555.555.5555</h5></a>
 			<a href="mailto:scomonty@gmail.com"><h5>Scomonty@gmail.com</h5></a>
@@ -199,13 +164,15 @@
 			<a href="http://www.instagram.com"><img class="logo" src="css/image/instagram-white.png" alt="Instagram"></a>
 			<a href="http://www.linkedin.com"><img class="logo" src="css/image/linkedin2-white.png" alt="LinkedIn"></a>
 			<a href="http://www.google.com"><img class="logo" src="css/image/google-plus-white.png" alt="Google+"></a>
-		<p id="endtag">&#169;2015 SLOANhealy&#174;</p>
-	</div>
-	</footer>	
+			<p id="endtag">&#169;2015 SLOANhealy&#174;</p>
+		</div>
+	</footer>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>    
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/skrollr.min.js"></script>
 	<script> var s = skrollr.init();</script>
 	<script src="js/animatescroll.js"></script>
+	
 </body>
 </html>
